texture example from substance painter and blender

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,27 @@ canvas {
     border-radius: 20px;
     background: #000000;
 }
+
+#theatrejs-studio-root {
+    z-index: 111111 !important;
+}
+
+html.lenis {
+    height: auto;
+}
+
+.lenis.lenis-smooth {
+    scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+    overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+    overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+    pointer-events: none;
+}
